--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@tailwindcss/vite": "^4.1.4",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.16.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
